# HTTP-Server-C

./: CMakeLists.txt  Makefile  README.md  test.txt  your_program.sh
include/: constants.h  defines.h  handler.h  http.h  parser.h  response.h  utils.h
src/: constants.c  handler.c  http.c  main.c  parser.c  response.c  utils.c  utils.h
